tests/NormalTests/paczka1/fuzzy1/84017484.err
Error in line 1: IoB A534 9,9
Error in line 37: 0gXJ5dt A554 64,4
Error in line 38: 0gXJ5dt A434 61,5
